fix(auth): copy of the `build.gradle.kts` from the authentication branch.
Fixing the code coverage to 0% bug